Update car price prediction .ipynb

--- a/car price prediction .ipynb
+++ b/car price prediction .ipynb
@@ -369,7 +369,7 @@
     "print (thet)\n",
     "\n",
     "price = None\n",
-    "# Estimate the price of a 1650 sq-ft, 3 br house\n",
+    "# Estimate the price of a a car having 1201 mileage and 18 years old\n",
     "####### START CODE ###########\n",
     "\n",
     "example = np.array([[1, 1201, 18, 1, 1]])   # the test example\n",
